# mirea-python-labs

./: .gitignore  README.md  pyproject.toml
utils/practice1/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py
