[tool.poetry]
name = "rtu-mirea-python-labs"
version = "0.1.0"
description = ""
authors = ["Иван Никонов <nikon2283@gmail.com>"]
repository="https://github.com/boldueen/mirea-python-labs"

[tool.poetry.dependencies]
python = "^3.9"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
